// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconCaretRound should correctly render default icon 1`] = `
<AccessibleSVG
  className="bdl-IconCaretRound "
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <path
    className="fill-color"
    d="M3.46 6.727a.572.572 0 0 1 .81-.81L8 9.648l3.73-3.73a.572.572 0 0 1 .81.81L8.495 10.77a.7.7 0 0 1-.99 0L3.46 6.727zm9.49 6.223a7 7 0 1 0-9.9-9.9 7 7 0 0 0 9.9 9.9z"
    fill="#4e4e4e"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconCaretRound should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="bdl-IconCaretRound test"
  height={100}
  title="title"
  viewBox="0 0 16 16"
  width={200}
>
  <path
    className="fill-color"
    d="M3.46 6.727a.572.572 0 0 1 .81-.81L8 9.648l3.73-3.73a.572.572 0 0 1 .81.81L8.495 10.77a.7.7 0 0 1-.99 0L3.46 6.727zm9.49 6.223a7 7 0 1 0-9.9-9.9 7 7 0 0 0 9.9 9.9z"
    fill="#444"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;
